[gd_scene load_steps=8 format=2]

[ext_resource path="res://RedRect.tscn" type="PackedScene" id=1]
[ext_resource path="res://Hand.gd" type="Script" id=2]
[ext_resource path="res://Timeline.gd" type="Script" id=3]
[ext_resource path="res://sprites/red_dot.png" type="Texture" id=4]
[ext_resource path="res://EffectText.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hero.gd" type="Script" id=6]
[ext_resource path="res://Player.gd" type="Script" id=9]

[node name="Battle" type="Node2D"]

[node name="HUD" type="Node2D" parent="."]

[node name="Timeline" type="ColorRect" parent="HUD"]
margin_left = 258.0
margin_top = 700.0
margin_right = 1658.0
margin_bottom = 720.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyAvatar" type="Sprite" parent="HUD/Timeline"]
visible = false
texture = ExtResource( 4 )

[node name="Hand" type="Node2D" parent="."]
position = Vector2( 960, 930 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Hand"]
autostart = true

[node name="Enemy1" type="Node2D" parent="."]
position = Vector2( 1516, 434 )

[node name="RedRect" parent="Enemy1" instance=ExtResource( 1 )]

[node name="Hero" type="Node2D" parent="."]
position = Vector2( 352, 434 )
script = ExtResource( 6 )

[node name="DefendTimer" type="Timer" parent="Hero"]
one_shot = true

[node name="EffectText" parent="Hero" instance=ExtResource( 5 )]

[node name="Player" type="Node2D" parent="."]
script = ExtResource( 9 )

[connection signal="timeout" from="Hand/Timer" to="Hand" method="_on_Timer_timeout"]
[connection signal="timeout" from="Hero/DefendTimer" to="Hero" method="_on_defend_timer_timeout"]
